--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app-reader.js": "/js/app-reader.js",
-    "/js/app-admin.js": "/js/app-admin.js"
+    "/js/app-reader.js": "/js/app-reader.js?id=3e55bf98848993d916d8",
+    "/js/app-admin.js": "/js/app-admin.js?id=ec4098d7eb1d787b0f2e"
 }
